# healthcare-claims-intelligence-risk-analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
data/raw/: custom_claims_template.csv
docs/: architecture.md  custom_data_guide.md  dashboard_spec.md  data_dictionary.md  data_sources.md  kpi_dictionary.md  model_cards.md
scripts/: build_static_site.py  run_healthcare_claims_pipeline.py  serve_dashboard.py
sql/04_marts/: healthcare_claims_marts.sql
sql/05_analytics/: healthcare_claims_risk_queries.sql
src/claims_intelligence/: __init__.py  config.py  custom_data.py  data_generation.py  documentation.py  marts.py  models.py  pipeline.py  quality.py  release.py  reporting.py  sql_analytics.py  warehouse.py
tests/: test_pipeline.py
