[project]
name = "healthcare-claims-intelligence-risk-analytics"
version = "0.1.0"
description = "Healthcare claims intelligence, risk analytics, PMPM, readmissions, provider outliers, HCC/RAF, and FWA dashboard platform."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "plotly>=5.20",
  "jinja2>=3.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

